Bug 1759883 - Subscribe/unsubscribe to oauth2 imap folders requires restart. r=benc

--HG--
extra : amend_source : c54397735387248e47fe7acb99e63f70ddce20d5